--- a/app/src/main/res/layout/view_swipe.xml
+++ b/app/src/main/res/layout/view_swipe.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@null">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/vSwipe"
@@ -16,20 +17,20 @@
         app:cardCornerRadius="20dp">
 
         <ImageView
-            android:id="@+id/vSwipeLeftImage"
+            android:id="@+id/vSwipeNopeImage"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:layout_gravity="top|start"
+            android:layout_gravity="top|end"
             android:layout_margin="16dp"
             android:alpha="0"
             android:rotation="10"
             android:src="@drawable/ic_swipe_nope" />
 
         <ImageView
-            android:id="@+id/vSwipeRightImage"
+            android:id="@+id/vSwipeYesImage"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:layout_gravity="top|end"
+            android:layout_gravity="top|start"
             android:layout_margin="16dp"
             android:alpha="0"
             android:rotation="-10"
