--- a/app/src/main/res/layout/activity_swipe.xml
+++ b/app/src/main/res/layout/activity_swipe.xml
@@ -4,10 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/GreenYellow"
     tools:context=".presentation.screen.basic.swipe.SwipeActivity">
 
-    <com.mellow.alt.presentation.custom.SwipeView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/vSwipes"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        tools:listitem="@layout/view_swipe" />
 
 </FrameLayout>
