--- a/app/src/main/res/layout/activity_swipe.xml
+++ b/app/src/main/res/layout/activity_swipe.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.screen.basic.swipe.SwipeActivity">
+    tools:context=".presentation.screen.navigation.SwipeActivity">
 
     <com.mellow.alt.presentation.custom.SwipeAdapter
         android:id="@+id/vSwipeController"
