--- a/androidApp/src/main/res/layout/view_edit_phone.xml
+++ b/androidApp/src/main/res/layout/view_edit_phone.xml
@@ -6,10 +6,20 @@
     android:orientation="vertical"
     android:weightSum="100">
 
+    <Button
+        android:id="@+id/SupportButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:src="@drawable/support.xml"
+        android:text= "@string/support_buttom"/>
+
+
     <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="20" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
