--- a/androidApp/src/main/res/layout/view_edit_phone.xml
+++ b/androidApp/src/main/res/layout/view_edit_phone.xml
@@ -6,13 +6,15 @@
     android:orientation="vertical"
     android:weightSum="100">
 
-    <Button
-        android:id="@+id/SupportButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/vIvSupportButton"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:layout_gravity="end"
-        android:src="@drawable/support.xml"
-        android:text= "@string/support_buttom"/>
+        android:clickable="true"
+        android:focusable="true"
+        android:src="@drawable/support"
+        android:text="@string/support_buttom" />
 
 
     <View
